Slider styled and working, Modified stylings for days, added template seats block to html, fixed overflow problem

--- a/public/styles/schedule/filter.less
+++ b/public/styles/schedule/filter.less
@@ -1,4 +1,6 @@
+@cs-blue: #3FA9F5;
 @sam-grey: #8a949e;
+
 
 .filter-panel {
 	padding: 8px 8px 8px 8px;
@@ -10,35 +12,96 @@
   	background-color: white;
 
   	.attribute {
-  		border: solid 1px @sam-grey;
-  		margin-top: 5px;
-  		margin-bottom: 5px;
+
+  		fieldset {
+  			border: solid 1px @sam-grey;
+  			margin-top: 10px;
+  			margin-bottom: 10px;
+  		}
+
+  		legend {
+  			color: @sam-grey;
+  			text-align: left;
+  			width: auto;
+  			border: none;
+  			font-size: 100%;
+  			line-height: 0px;
+  			margin-left: 3%;
+  			margin-right: auto;
+  			margin-bottom: 15px;
+  			padding-left: 0.5em;
+  			padding-right: 0.5em;
+  		}
   	}
 
   	.days{
-  		margin: 5px;
+  		text-align: center;
+  		margin: 10px;
 		.day {
 			text-align: center;
 		}
   	}
 
+  	.time {
+  		color: @cs-blue;
+  		margin-left: 10px;
+  	}
+
+  	/** Slider Stylings **/
   	.slider {
-  		color: @sam-grey;
   		margin: 10px;
   	}
-	.ui-slider { position: relative; text-align: left; }
-	.ui-slider .ui-slider-handle { position: absolute; z-index: 2; width: 1.2em; height: 1.2em; cursor: default; }
-	.ui-slider .ui-slider-range { position: absolute; z-index: 1; font-size: .7em; display: block; border: 0; background-position: 0 0; }
-
-	.ui-slider-horizontal { height: .8em; }
-	.ui-slider-horizontal .ui-slider-handle { top: -.3em; margin-left: -.6em; }
-	.ui-slider-horizontal .ui-slider-range { top: 0; height: 100%; }
-	.ui-slider-horizontal .ui-slider-range-min { left: 0; }
-	.ui-slider-horizontal .ui-slider-range-max { right: 0; }
-
-	.ui-slider-vertical { width: .8em; height: 100px; }
-	.ui-slider-vertical .ui-slider-handle { left: -.3em; margin-left: 0; margin-bottom: -.6em; }
-	.ui-slider-vertical .ui-slider-range { left: 0; width: 100%; }
-	.ui-slider-vertical .ui-slider-range-min { bottom: 0; }
-	.ui-slider-vertical .ui-slider-range-max { top: 0; }
+	.ui-slider { 
+		position: relative;
+		text-align: left;
+	 }
+	.ui-slider .ui-slider-handle {
+		position: absolute; 
+		z-index: 2;
+		width: 0.5em; 
+		height: 1em; 
+		cursor: default; 
+	}
+	.ui-slider .ui-slider-range { 
+		position: absolute; 
+		z-index: 1; 
+		font-size: 0.7em; 
+		display: block; 
+		border: 0; 
+		background-position: 0 0; 
+	}
+	.ui-slider-horizontal { 
+		height: 0.6em; 
+	}
+	.ui-slider-horizontal .ui-slider-handle { 
+		top: -.3em; 
+		margin-left: -.6em; 
+	}
+	// slider range background
+	.ui-widget-header {
+		border: 1px solid @cs-blue;
+		background-color: @cs-blue;
+		background-image: none;
+	}
+	// slider hovering style
+	.ui-state-hover, .ui-widget-content .ui-state-hover, .ui-widget-header .ui-state-hover, .ui-state-focus, .ui-widget-content .ui-state-focus, .ui-widget-header .ui-state-focus { 
+		border: 1px solid @cs-blue;
+		background-color: @cs-blue * 3;
+		background-image: none;
+		font-weight: bold;
+		color: @sam-grey; 
+	}
+	// slider moving style
+	.ui-state-active, .ui-widget-content .ui-state-active, .ui-widget-header .ui-state-active { 
+		border: 1px solid @cs-blue;
+		background-color: #ffffff;
+		background-image: none;  
+		font-weight: bold; 
+		color: @cs-blue;
+	 }
+	// slider hovering around style
+	.ui-state-hover a, .ui-state-hover a:hover {
+		color: @cs-blue;
+		text-decoration: none;
+	}
 }
