--- a/public/styles/schedule/framework.less
+++ b/public/styles/schedule/framework.less
@@ -82,6 +82,7 @@ body{
 
 
 		#filter-frame{
+			overflow-y: scroll;
 		}
 
 		#results-frame{
